package PS.GP;
import "proto/config.proto";

message Config {
  optional DataConfig input_graph = 1;
  optional DataConfig output_graph = 2;
  optional ParsaConfig parsa = 3;
}

message ParsaConfig {
  optional int32 block_size = 4 [default = 100000];
  optional int32 num_partitions = 5 [default = 8];
  // optional int32 V_size = 6 [default = 1000000];
  optional int32 bloomfilter_k = 6 [default = 4];
  optional float bloomfilter_m_ratio = 9 [default = 2];
  optional int32 cost_cache_limit = 7 [default = 100];
  optional int32 data_buff_size_in_MB = 8 [default = 1000];
  // do random partition
  optional bool randomly_partition_U = 10 [default = false];
  optional bool randomly_partition_V = 11 [default = false];
  // optional bool run_baseline = 10 [default = false];
}

message Call {
  enum Command {
    PARTITION_U = 1;
    PARTITION_V = 2;
  }
  required Command cmd = 1;
}
